src/components/header/components/header-socials/header-socials.module.scss
.headerSocials {
  gap: 48px;
  flex-grow: 1;
  display: flex;
  justify-content: end;

  &__tel {
    color: var(--primary-text-color);
    font-family: Inter, sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 19px;
    text-align: right;

    text-decoration: none;
  }
}

